add autoload to composer.json

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
             "name": "Falk Doering",
             "email": "falk.doering@fadoe.de"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-0": {
+            "FaDoe\\Filter": ""
+        }
+    }
 }
