--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "php": ">=5.3.10",
         "zendframework/zend-filter": "2.1.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "authors": [
         {
             "name": "Falk Doering",
@@ -15,7 +18,10 @@
     "target-dir": "FaDoe/Filter",
     "autoload": {
         "psr-0": {
-            "FaDoe\\Filter\\": ""
-        }
+            "FaDoe": "src/"
+        },
+        "classmap": [
+            "./"
+        ]
     }
 }
