--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,19 @@
     "name": "fadoe/fadoe-filter",
     "description": " ",
     "license": "BSD-3-Clause",
-    "require": {
-        "php": ">=5.3.10",
-        "zendframework/zend-filter": "2.1.*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "3.7.*"
-    },
     "authors": [
         {
             "name": "Falk Doering",
-            "email": "falk.doering@fadoe.de"
+            "role": "Developer"
         }
     ],
+    "require": {
+        "php": ">=5.3.10",
+        "zendframework/zend-filter": "~2.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~3.7"
+    },
     "autoload": {
         "psr-0": {
             "FaDoe": "src/"
